# explorer-age-verification

./: CITATION.cff  README.md  SE_MANIFEST.toml  pyproject.toml  zensical.toml
.github/workflows/: ci-python-zensical.yml
docs/: explorer.md  glossary.md  index.md  motivation.md
docs/data/: results.json
docs/explorer/: app.js  data-csv.js  data-toml.js  evaluator.js  index.html  state.js  styles.css  ui-editors.js  ui-load.js  ui-results.js  ui-tabs.js
scripts/: run_admissibility.py
src/explorer_age_verification/: __init__.py  cli.py  config.py
src/explorer_age_verification/domain/: candidates.py  results.py
src/explorer_age_verification/evaluation/: evaluator.py
src/explorer_age_verification/io/: load_candidates.py  load_policy.py
src/explorer_age_verification/policy/: example.py
src/explorer_age_verification/reporting/: tables.py
src/explorer_age_verification/scenarios/: example.py
src/explorer_age_verification/utils/: logging_utils.py
tests/: test_admissibility.py
